welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:2: error: ')' expected but ',' found.
  if (cigars >= 40 && cigars <= 60 , !isWeekend )
                                   ^cigarParty:8: error: illegal start of simple expression
} 
^